--- a/src/App.scss
+++ b/src/App.scss
@@ -2,3 +2,21 @@
   position: relative;
   width: 100%;
 }
+h1 {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 42px;
+  line-height: 54px;
+  text-transform: uppercase;
+  color: #3F4252;
+}
+h9 {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 28px;
+  text-transform: uppercase;
+  color: #FF5A1F;
+}
