--- a/src/Header/Header.scss
+++ b/src/Header/Header.scss
@@ -1,121 +1,99 @@
+@import "../path_file.scss";
+
 .App-header {
+  padding: 16px 138px;
+  justify-content: space-between;
+  gap: 20px;
   display: flex;
   flex-direction: row;
   align-items: flex-start;
   background: #ffffff;
-}
-.MenuBtn span {
-  display: none;
-  width: 22px;
-  border: 1px solid #3f4252;
-  margin-bottom: 6px;
-}
-.MenuBtn {
-  margin-left: auto;
-  height: 24px;
-}
-.MenuBtn.active {
-  position: relative;
-  top: 4px;
-}
-.MenuBtn.active span:nth-child(1) {
-  position: relative;
-  top:4px;
-  transform: rotate(45deg);
-}
-.MenuBtn.active span:nth-child(2) {
-  display: none;
-}
-.MenuBtn.active span:nth-child(3) {
-  position: relative;
-  bottom:4px;
-  transform: rotate(-45deg);
-}
-@media screen and (min-width: 1440px) {
-  .App-header {
-    padding: 16px 138px;
-    justify-content: space-between;
-    gap: 20px;
-  }
-  .MenuItems {
-    display: flex;
-  }
-  .MenuItems a {
-    font-weight: 300;
-    font-size: 14px;
-    line-height: 24px;
-    background-image: linear-gradient(#ff5a1f, #ff5a1f);
-  }
-}
-@media screen and (min-width: 1281px) and (max-width: 1440px) {
-  .App-header {
+  @include _1440 {
     padding: 16px 24px;
     justify-content: space-between;
     gap: 20px;
   }
-  .MenuItems {
-    display: flex;
-  }
-  .MenuItems a {
-    font-weight: 300;
-    font-size: 14px;
-    line-height: 24px;
-    background-image: linear-gradient(#ff5a1f, #ff5a1f);
-  }
-}
-@media screen and (min-width: 769px) and (max-width: 1280px) {
-  .App-header {
+  @include _1280 {
     padding: 16px 0px;
     margin: 0 24px 0 24px;
     justify-content: space-between;
     gap: 20px;
   }
-  .MenuItems {
-    display: flex;
-  }
-  .MenuItems a {
-    font-weight: 300;
-    font-size: 14px;
-    line-height: 24px;
-    background-image: linear-gradient(#ff5a1f, #ff5a1f);
-  }
-}
-@media screen and (min-width: 320px) and (max-width: 768px) {
-  .App-header {
+  @include _768 {
+    background: #ffffff;
     padding: 15px 16px;
-    //margin: 0 24px 0 24px;
+    margin: 0;
     gap: 10px;
     justify-content: space-between;
   }
-  .MenuBtn span {
-    display: flex;
-  }
-  .MenuItems {
-    //display: none;
+}
+
+.MenuItems {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  gap: 10px;
+  list-style-type: none;
+  @include _768 {
     position: fixed;
     margin: 48px 0 0 0;
     padding: 41px 0 19px 0;
     top: -150%;
-    z-index: -1;
+     z-index: 2;
     left: 0;
     width: 100%;
     height: 100%;
     background: #f6f5f5;
     transition: all 0.5s ease 0s;
   }
-  .MenuItems.active {
-    display: block;
-    top: 0;
+}
+.MenuItems a {
+  font-family: "Montserrat";
+  padding: 6px 12px 5px;
+  font-style: normal;
+  color: #3f4252;
+  text-decoration: none;
+  background-position: 0% 100%;
+  background-repeat: no-repeat;
+  background-size: 0% 2px;
+  transition: background-size 0.3s;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 24px;
+  background-image: linear-gradient(#ff5a1f, #ff5a1f);
+  @include _1440 {
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 24px;
+    background-image: linear-gradient(#ff5a1f, #ff5a1f);
   }
-
-
-  .MenuItems a {
+  @include _1280 {
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 24px;
+    background-image: linear-gradient(#ff5a1f, #ff5a1f);
+  }
+  @include _768 {
     font-weight: 400;
     font-size: 20px;
     line-height: 28px;
     background-image: none;
   }
-  .MenuItems li {
+}
+.MenuItems a:hover,
+.MenuItems a.active {
+  color: #ff5a1f;
+  background-size: 100% 2px;
+}
+
+.MenuItems.active {
+  @include _768 {
+    display: block;
+    top: 0;
+  }
+}
+.MenuItems li {
+  @include _768 {
     margin-bottom: 19px;
   }
 }
@@ -136,25 +114,37 @@
   width: 536px;
 }
 
-.MenuItems {
-  flex-direction: row;
-  align-items: flex-start;
-  gap: 10px;
-  list-style-type: none;
+.MenuBtn span {
+  display: none;
+  width: 22px;
+  border: 1px solid #3f4252;
+  margin-bottom: 6px;
+  @include _768 {
+    display: flex;
+  }
 }
-.MenuItems a {
-  font-family: "Montserrat";
-  padding: 6px 12px 5px;
-  font-style: normal;
-  color: #3f4252;
-  text-decoration: none;
-  background-position: 0% 100%;
-  background-repeat: no-repeat;
-  background-size: 0% 2px;
-  transition: background-size 0.3s;
+.MenuBtn {
+  margin-left: auto;
+  height: 24px;
+  display: none;
+  @include _768 {
+    display: block;
+  }
 }
-.MenuItems a:hover,
-.MenuItems a.active {
-  color: #ff5a1f;
-  background-size: 100% 2px;
+.MenuBtn.active {
+  position: relative;
+  top: 4px;
+}
+.MenuBtn.active span:nth-child(1) {
+  position: relative;
+  top: 4px;
+  transform: rotate(45deg);
+}
+.MenuBtn.active span:nth-child(2) {
+  display: none;
+}
+.MenuBtn.active span:nth-child(3) {
+  position: relative;
+  bottom: 4px;
+  transform: rotate(-45deg);
 }
