--- a/src/App.scss
+++ b/src/App.scss
@@ -9,7 +9,14 @@ h1 {
   font-size: 42px;
   line-height: 54px;
   text-transform: uppercase;
-  color: #3F4252;
+  color: #3f4252;
+}
+h3 {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 40px;
+  line-height: 48px;
 }
 h9 {
   font-family: "Montserrat";
@@ -18,5 +25,12 @@ h9 {
   font-size: 20px;
   line-height: 28px;
   text-transform: uppercase;
-  color: #FF5A1F;
+  color: #ff5a1f;
+}
+h10 {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 24px;
 }
