--- a/src/Body/Body.scss
+++ b/src/Body/Body.scss
@@ -8,7 +8,8 @@
     padding: 0 24px;
   }
   @include _1440 {
-    padding: 0 0 0 24px;
+    padding: 0 19px 0 24px;
+    justify-content: space-between;
   }
 }
 .MainText {
@@ -40,16 +41,16 @@ mark {
     align-items: start;
     margin: 40px 0 0 0;
     flex-direction: column;
-    justify-content:start;
+    justify-content: start;
   }
   @include _1280 {
     align-items: start;
     margin: 0;
     flex-direction: column;
-    justify-content:start;
+    justify-content: start;
   }
   @include _1440 {
-    justify-content:start;
+    //justify-content:start;
   }
 }
 .ProjectBtn {
@@ -72,14 +73,216 @@ mark {
 }
 
 .PicWrap {
-  margin:-77px 65px 0 205px;
+  margin: -77px 65px 0 205px;
   @include _768 {
     margin: 0 0 0 0;
   }
   @include _1280 {
     margin: 0 0 0 117px;
+    align-self: flex-end;
   }
   @include _1440 {
-    margin: 0 0 0 205px;
+    margin: -77px 0px 0 0px;
   }
+}
+
+//SecondStep
+
+.SecondStep {
+  display: flex;
+  margin: 169px 138px 148px 72px;
+  justify-content: space-between;
+  align-items: flex-end;
+  @include _768 {
+    padding: 0;
+    margin: 32px 16px;
+    align-items: start;
+    flex-direction: column-reverse;
+  }
+  @include _1280 {
+    margin: 105px 24px 64px 24px;
+    padding: 0;
+    align-items: start;
+    flex-direction: column-reverse;
+  }
+  @include _1440 {
+    margin: 98px 24px 98px 34px;
+    justify-content: space-between;
+  }
+}
+.SecondStepTextWrap {
+  width: 572px;
+  margin: 0;
+  @include _768 {
+    width: 100%;
+  }
+  @include _1280 {
+    width: 100%;
+  }
+  @include _1440 {
+    width: 604px;
+  }
+}
+.SecondPic {
+  width: 100%;
+  height: 100%;
+}
+.PicWrapSecond {
+  margin: 0 104px 0 0;
+  flex-grow: 0.3;
+  //min-width: 554px;
+  @include _768 {
+    align-self: center;
+    margin: 24px 0 0 0;
+  }
+  @include _1280 {
+    align-self: center;
+    margin: 40px 0 0 0;
+  }
+  @include _1440 {
+    margin: 0 82px 0 0;
+  }
+}
+.MainText2 {
+  margin: 0;
+  color: #3f4252;
+  @include _768 {
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 32px;
+  }
+  @include _1280 {
+    font-size: 24px;
+    line-height: 32px;
+    margin-right: 168px;
+  }
+}
+.TextWrapH10 {
+  display: flex;
+  flex-direction: column;
+  margin-right: 48px;
+  @include _768 {
+    margin: 0;
+  }
+  @include _1280 {
+    margin-right: 85px;
+  }
+  @include _1440 {
+    margin-right: 78px;
+  }
+}
+.Text1 {
+  flex: 1 1 auto;
+  margin: 24px 0 0 0;
+  @include _768 {
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 22px;
+  }
+  @include _1280 {
+    font-size: 16px;
+    line-height: 22px;
+  }
+}
+.ThirdStep {
+  display: flex;
+  justify-content: center;
+  margin: 0 0 163px 0;
+  grid-gap: 24px;
+  @include _768 {
+    flex-wrap: wrap;
+    margin: 0 0px 31px 0;
+  }
+  @include _1280 {
+    flex-wrap: wrap;
+    margin: 0 0px 77px 0;
+  }
+  @include _1440 {
+    margin: 0 24px 115px 24px;
+  }
+}
+.ThirdWrapItem {
+  display: flex;
+  width: 273px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 40px 0px;
+  gap: 24px;
+  background: linear-gradient(170.08deg, #f5f7ff 5.84%, #fff8f1 101.38%);
+  box-shadow: 0px 15px 45px rgba(0, 0, 0, 0.1);
+  border-radius: 32px;
+  @include _1280 {
+    width: 324px;
+  }
+  @include _1440 {
+    width: 290px;
+  }
+}
+.ThirdMainText {
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 39px;
+  color: #3f4252;
+  margin: 0;
+}
+.ThirdOtherText {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22px;
+  text-align: center;
+  color: #3f4252;
+  margin: 0;
+  padding: 0 20px;
+  @include _1280 {
+    padding: 0 65px;
+  }
+  @include _1440 {
+    padding: 0 25px;
+  }
+}
+.RedLine {
+  width: 72px;
+  height: 4px;
+  background: #e73f3f;
+  border-radius: 4px;
+}
+
+.FourthStep {
+  display: flex;
+  flex-direction: column;
+}
+.FourthWrapItem {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 0px;
+  gap: 130px;
+  margin: 0 138px;
+}
+.FourthWrapText {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 55px 0px 0px;
+  gap: 24px;
+  width: 438px;
+}
+.FourthMainText {
+  font-weight: 600;
+  font-size: 40px;
+  line-height: 48px;
+  color: #3f4252;
+  margin: 0;
+}
+.FourthOtherText {
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 24px;
+  display: flex;
+  align-items: center;
+  color: #3f4252;
+  margin: 0;
+  padding-right: 60px;
 }
