--- a/src/App.scss
+++ b/src/App.scss
@@ -18,6 +18,24 @@ h3 {
   font-size: 40px;
   line-height: 48px;
 }
+h4 {
+  font-family: "Montserrat";
+  font-style: normal;
+}
+h5 {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 700;
+  color: #3f4252;
+  margin: 0;
+}
+h6 {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  color: #3a3c3b;
+  margin: 0;
+}
 h9 {
   font-family: "Montserrat";
   font-style: normal;
