--- a/src/path_file.scss
+++ b/src/path_file.scss
@@ -1,3 +1,8 @@
+@mixin _max {
+    @media (min-width: 1441px) and (max-width: 2500px){
+        @content;
+    }
+}
 @mixin _1440 {
     @media (min-width: 1280px) and (max-width: 1439px){
         @content;
