--- a/src/Body/ModalWindow/Form/Form.scss
+++ b/src/Body/ModalWindow/Form/Form.scss
@@ -1,12 +1,13 @@
 .Form {
   margin: 24px 0 0 0;
+}
+.FormFieldWrap {
   position: relative;
 }
 .FormField {
   display: flex;
   justify-content: space-between;
   margin-bottom: 16px;
-  align-items: center;
 }
 .FieldLabel {
   font-family: "Montserrat";
@@ -15,6 +16,7 @@
   font-size: 14px;
   line-height: 24px;
   color: #212332;
+  margin-top: 10px;
 }
 .FieldInput {
   box-sizing: border-box;
@@ -44,11 +46,14 @@
   background: #ffffff;
   border: 1px solid #7c7f8e;
 }
-
+.FieldInput.Big {
+  height: 90px;
+  resize: none;
+}
 .FieldInput.error {
-    border: 1px solid #E73F3F;
-    color: #E73F3F;
-  }
+  border: 1px solid #e73f3f;
+  color: #e73f3f;
+}
 .FieldInputWrap {
   position: relative;
 }
@@ -58,6 +63,10 @@
   right: 0%;
   transform: translate(-50%, -50%);
   cursor: pointer;
+}
+.SendBtn.disable {
+  border: 2px solid #bebebe;
+  color: #bebebe;
 }
 .SendBtn {
   align-items: center;
@@ -72,6 +81,7 @@
   border-radius: 24px;
   color: #ff5a1f;
   background-color: #ffffff;
+  cursor: pointer;
 }
 .ErrorMass {
   height: 22px;
@@ -92,6 +102,22 @@
   margin: 0;
   position: absolute;
   right: 48%;
-  top: 35%;
+  top: 115%;
   transform: translate(-50%, -50%);
+}
+.FormFooter {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-top: 24px;
+}
+.FooterText {
+  width: 297px;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  color: #3f4252;
+  margin: 0;
 }
