--- a/src/Body/ModalWindow/ModalWindow.scss
+++ b/src/Body/ModalWindow/ModalWindow.scss
@@ -1,3 +1,4 @@
+@import "../../path_file.scss";
 .ModalWindow {
   position: fixed;
   height: 100%;
@@ -20,12 +21,23 @@
   background: #ffffff;
   box-shadow: 0px 16px 32px rgba(42, 61, 87, 0.16);
   border-radius: 16px;
+  @include _768 {
+    padding: 24px 10px 24px 10px;
+    margin: 0 19px 0 19px;
+    width: 100%;
+    height: 90%;
+    overflow: hidden auto;
+  }
 }
 .ModalHeader {
   display: flex;
   justify-content: space-between;
   margin-bottom: 32px;
   align-items: center;
+  @include _768 {
+    flex-direction: column;
+    margin-bottom: 16px;
+  }
 }
 .ModalLine {
   width: 100%;
@@ -39,9 +51,21 @@
   line-height: 40px;
   color: #212332;
   margin: 0;
+  @include _768 {
+    order: 1;
+    font-size: 20px;
+    line-height: 28px;
+    align-self: flex-start;
+  }
 }
 .CloseBtn {
   width: 56px;
   height: 56px;
   cursor: pointer;
+  @include _768 {
+    width: 32px;
+    height: 32px;
+    order: 0;
+    align-self: flex-end;
+  }
 }
